--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
     "node": ">= 0.10.0"
   },
   "scripts": {
-    "test": "NODE_ENV=test node test/scss_to_json_tests.js"
+    "test": "node test/scss_to_json_tests.js"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
+    "grunt-cli": "^0.1.13",
     "grunt-contrib-clean": "^0.5.0"
   },
   "peerDependencies": {
