--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
     "test": "node test/scss_to_json_tests.js"
   },
   "devDependencies": {
-    "grunt": "~0.4.5",
+    "grunt": ">=0.4.5",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-clean": "^0.5.0"
   },
   "peerDependencies": {
-    "grunt": "~0.4.5"
+    "grunt": ">=0.4.5"
   },
   "keywords": [
     "gruntplugin",
